<resources>
    <string name="app_name">CetinjeVodic</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Galerija -->
    <string name="gallery_toolbar">Galerija</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>

    <!-- Restorani -->
    <string name="restaurant_title">Restorani</string>
    <string name="restaurant_title1">Ime restorana:</string>
    <string name="restaurant_description">Opis:</string>

    <!-- CulturalHeritage -->
    <string name="cultural_heritage_title">Znamenitosti</string>
    <string name="cultural_heritage_name">Naziv:</string>
    <string name="cultural_heritage_description">Opis:</string>

    <!-- Events -->
    <string name="event_title">Događaji</string>
    <string name="event_name">Naziv:</string>
    <string name="event_start">Vrijeme održavanja:</string>

    <!-- Strings related to MainActivity-->
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="open_app_button">Open App</string>

    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!-- Tutorial -->
    <string name="route_title">Route</string>
    <string name="route_description">Route description</string>
    <string name="objects_title">Objects</string>
    <string name="objects_description">Objects description</string>
    <string name="gallery_title">Gallery</string>
    <string name="gallery_description">Gallery description</string>
    <string name="restaurants_title">Restaurants</string>
    <string name="restaurants_description">Restaurants description</string>
    <string name="news_title">Events</string>
    <string name="news_description">Events description</string>
    <string name="quiz_title">Quiz</string>
    <string name="quiz_description">Quiz description</string>

</resources>
