<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/result_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_barcode_captured"
        android:textSize="22sp"
        android:freezesText="true"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="257dp" />

    <Button
        android:id="@+id/scan_barcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/result_textview"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/scan_barcode_button"
        android:textColor="@color/colorWhite" />
    <Button
        android:id="@+id/open_app_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/open_app_button"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/scan_barcode_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />
</RelativeLayout>
