<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_restaurant_pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cetinje.bozo.cetinjevodic.EventPagerActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_event_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </android.support.v4.view.ViewPager>

    <ImageView
        android:id="@+id/image_event"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:layout_below="@+id/image_event"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/event_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_start"
        android:layout_below="@+id/event_title"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_description"
        android:layout_below="@+id/event_start"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
